fix appIcon not showing on subpages, add custom section with large screenshots, title and decsription after small feature grid

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -602,6 +602,116 @@ nav > ul li a:active {
 	
 } 
 
+// featureBig
+.featuresBig {
+	grid-area: c;
+	display: flex;
+	flex: 0 1 auto;
+	align-content: flex-start;
+	justify-content: flex-start;
+	flex-grow: 1;
+	flex-wrap: wrap;
+	//margin-top: 93px;
+	margin-top: 493px; // TODO: automatically make section appear after previous
+}
+
+.featureBigContainer {
+	//background-color: #e6e6e6;
+	background: rgb(0,0,0);
+	background: linear-gradient(90deg, rgba(255,159,10,0.02) 0%, rgba(255,159,10,0.5) 56%);//linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(255,159,10,0.3) 56%);
+	border-radius: 25px;
+	margin: auto;
+
+	display: flex;
+	//padding-top: 63px;
+	padding-left: 15px;
+	padding-right: 15px;
+	width: 70%;
+
+	// display: grid;
+ 	align-items: center;
+	justify-content: center;
+ 	// grid-template-columns: 1fr 1fr 1fr;
+ 	// column-gap: 5px;
+	margin-bottom: 40px;
+	//position: relative;
+}
+
+.featureBigContainer:nth-child(2n) { // switch order of every second featureBigContainer
+	//background-color: rgba(255, 159, 10, 0.3);//#ff9f0a;
+	background: rgb(0,0,0);
+	background: linear-gradient(270deg, rgba(255,159,10,0.02) 0%, rgba(255,159,10,0.5) 56%);//linear-gradient(270deg, rgba(0,0,0,0) 0%, rgba(255,159,10,0.3) 56%); 
+	flex-direction: row-reverse;
+}
+
+.featureBigImage {
+	//padding-left: 200px;
+	max-width: 300px;
+	height:  auto;
+	padding: 15px;
+	border-radius: 35px;
+}
+
+.featureBigText {
+	text-align: center;
+	//padding-top: 150px;
+	max-width: 50%;
+	//margin-left: 18px;
+	//position: absolute;
+	//top: 30%;
+	//transform: translate(0, -20%);
+}
+
+.featureBigText > h3 {
+	color: $feature-title-color;
+	font-size: 35px;
+	padding-bottom: 30px;
+}
+
+.featureBigText > p {
+	color: $feature-text-color;
+	margin-top: 8px;
+	line-height: 1.5;
+}
+
+@media only screen and (max-width: 992px) {
+	.featuresBig {
+		flex-grow: 1;
+		flex-direction: row;
+		flex-wrap: wrap;
+		margin-top: 893px;
+	}
+
+	.featureBigContainer {
+		flex-grow: 1;
+		flex-direction: row;
+		flex-wrap: wrap;
+
+		margin: 10px;
+		width: 90%;
+	}
+
+	.featureBigImage {
+		//max-width: 150px;
+	}
+
+	.featureBigText {
+		padding-top: 15px;
+		max-width: 90%;
+	}
+}
+
+// @media only screen and (max-width: 375px) {
+// 	.featuresBig {
+// 		flex-grow: 1;
+// 		flex-direction: row;
+// 		flex-wrap: wrap;
+// 		margin-top: 893px;
+// 	}
+// }
+
+
+
 
 
 // Footer
